openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-generator
spec:
  selector:
    app: question-generator
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
