openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: question-generator
spec:
  to:
    kind: Service
    name: question-generator
  port:
    targetPort: 8080
  tls:
    termination: edge
